--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-streamlit>=1.33
-requests>=2.31
-pandas
-numpy
-plotly
-Pillow
-opencv-python-headless
-streamlit-player
+from bs4 import BeautifulSoup
+# streamlit run dashboard_fixed.py
+# -*- coding: utf-8 -*-
+
+import os
+import re
+import ast
+import base64
+import time
+import datetime
+from pathlib import Path
+from collections import Counter, defaultdict
+from urllib.parse import quote_plus, unquote_plus
+
+import streamlit as st
+import matplotlib.pyplot as plt
+from matplotlib import patches
+import matplotlib.image as mpimg
+import pandas as pd
+import requests
