--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
-import os
-import re
-import ast
-import base64
-import time
-import datetime
-from pathlib import Path
-from collections import Counter, defaultdict
-from urllib.parse import quote_plus, unquote_plus
-
-import streamlit as st
-import matplotlib.pyplot as plt
-from matplotlib import patches
-import matplotlib.image as mpimg
-import pandas as pd
-import requests
+streamlit>=1.37
+pandas>=2.0
+matplotlib>=3.8
+requests>=2.31
