--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit>=1.37
-pandas>=2.0
-matplotlib>=3.8
-requests>=2.31
-beautifulsoup4>=4.12
+streamlit>=1.32.0
+pandas>=2.0.0
+plotly>=5.17.0
+openpyxl>=3.1.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+scipy>=1.10.0
